<resources>
    <string name="app_name" translatable="false">Esta</string>

    <string name="newButton">New</string>
    <string name="refreshButton">Refresh</string>
    <string name="saveButton">Save</string>

    <string name="firstnameString">Firstname</string>
    <string name="lastnameString">Lastname</string>
    <string name="birthdateString">BirthDate</string>
    <string name="invalidBirthdateString">Invalid Date format. Please use YYYY-MM-DD</string>
    <string name="notAllFieldsFilledString">Please fill out all fields</string>
</resources>
