<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:text="@string/newButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refreshButton"
        android:layout_above="@+id/list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="109dp"
        android:layout_marginStart="109dp"
        android:id="@+id/firstnameText"
        android:layout_alignBottom="@+id/newButton"
        android:layout_toRightOf="@+id/newButton"
        android:layout_toEndOf="@+id/newButton"
        android:hint="@string/firstnameString" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="122dp"
        android:layout_marginStart="122dp"
        android:id="@+id/lastnameText"
        android:layout_alignBaseline="@+id/firstnameText"
        android:layout_alignBottom="@+id/firstnameText"
        android:layout_toRightOf="@+id/firstnameText"
        android:layout_toEndOf="@+id/firstnameText"
        android:hint="@string/lastnameString" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_alignBottom="@+id/refreshButton"
        android:layout_alignLeft="@+id/firstnameText"
        android:layout_alignStart="@+id/firstnameText"
        android:layout_marginBottom="22dp"
        android:id="@+id/birthdateText"
        android:hint="@string/birthdateString" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true" >
    </ListView>

</RelativeLayout>